Improved ball and goalkeeper animation

--- a/PenaltyShootoutGame/Properties/Resources.resx
+++ b/PenaltyShootoutGame/Properties/Resources.resx
@@ -118,11 +118,14 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="mainscreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mainscreen1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="top-left-save" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\top-left-save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="mainscreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\mainscreen1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="top-right-save" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\top-right-save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="top-save" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\top-save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -145,7 +148,7 @@
   <data name="bottom-left-save" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bottom-left-save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="top-right-save" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\top-right-save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="endscreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\endscreen.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
